--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>This is the homepage!</h1>
-<p>I don't know what is going to go here, but rails seems pretty cool.</p>
+<div class="jumbotron">
+	<h1>This is the Homepage!</h1>
+	<p>rails seems pretty <%= link_to "cool", "http://www.i.imgur.com/G0GsLpX.jpg", class: "btn btn-primary" %> </p>
+</div>
