--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,27 @@
-<h1>This is the about page</h1>
+<h1>Team Frank</h1>
 <p>We are all about making money by doing what we enjoy.</p>
+
+<table class = "table table-striped table-condensed">
+	<thead>
+		<tr>
+			<th>#</th>
+			<th>Objective</th>
+			<th>Reason</th>
+			<th>Timeframe</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>1</td>
+			<td>Do whatever I please</td>
+			<td>Because I want to</td>
+			<td>Now</td>
+		</tr>
+		<tr>
+			<td>2</td>
+			<td>Make Money</td>
+			<td>Money is necessary</td>
+			<td>Now</td>
+		</tr>
+	</tbody>
+</table>
