--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,8 @@
-<div class="jumbotron">
+<div class="jumbotron center">
 	<h1>This is the Homepage!</h1>
-	<p>rails seems pretty <%= link_to "cool", "http://www.i.imgur.com/G0GsLpX.jpg", class: "btn btn-primary" %> </p>
+	<!-- <p>rails seems pretty <%= link_to "cool", "http://www.i.imgur.com/G0GsLpX.jpg", class: "btn btn-primary" %> </p> -->
+	<p>
+		<%= link_to "Log in", "#", class:"btn btn-default btn-lg" %>
+		<%= link_to "Sign up", "#", class:"btn btn-primary btn-lg" %>
+	</p>
 </div>
