--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 	<h1>This is the Homepage!</h1>
   <% if !user_signed_in? %>
 	 <p>
-	 	 <%= link_to "Log in", "#", class:"btn btn-default btn-lg" %>
+	 	 <%= link_to "Log in", new_user_session_path, class:"btn btn-default btn-lg" %>
 		  <%= link_to "Sign up", "#", class:"btn btn-primary btn-lg" %>
 	 </p>
   <% end %>
